# Google-Gemma4-good-hackathon-VimalXMark

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_JOURNEY.md  DEMO_WALKTHROUGH.md  ENHANCEMENT_PLAN.md  LICENSE  MALAIKA_PROPOSAL.md  MASTERPLAN.md  Makefile  README.md  REASONS_WE_WILL_FAIL.md  SECURITY.md  SOURCES.md  SUBMISSION_CHECKLIST.md  TRACKER.md  VIDEO_SCRIPT.md  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ENGINEERING_PRINCIPLES.md  FINETUNING_ROADMAP.md  NOTEBOOK_12_VILLAGE_CLINIC_PLAN.md  NOTEBOOK_13_BASE_VS_FINETUNED_PLAN.md  PROMPT_ENGINEERING.md  README.md  SECURITY.md  SESSION_LOG.md  TESTING_STRATEGY.md
docs/history/: IMPLEMENTATION_PLAN.md  MALAIKA_PROPOSAL.md  MASTERPLAN.md  README.md  RESEARCH.md  VIDEO_SCRIPT_5MIN.md  VIDEO_SCRIPT_v2.md
malaika/: __init__.py  app.py  audio.py  chat_app.py  chat_engine.py  config.py  edge_app.py  imci_engine.py  imci_protocol.py  inference.py  skills.py  spectrogram.py  tts.py  types.py  vision.py  voice_app.py  voice_session.py  voice_session_edge.py
malaika/evaluation/: GUIDELINES.md  __init__.py  evaluator.py  golden_scenarios.py
malaika/guards/: GUIDELINES.md  __init__.py  content_filter.py  input_guard.py  output_validator.py
malaika/observability/: GUIDELINES.md  __init__.py  cost_tracker.py  feedback.py  tracer.py
malaika/prompts/: GUIDELINES.md  __init__.py  base.py  breathing.py  danger_signs.py  diarrhea.py  fever.py  heart.py  nutrition.py  speech.py  system.py  treatment.py
malaika/static/: index.html
malaika_flutter/: README.md  analysis_options.yaml  pubspec.yaml
malaika_flutter/android/app/: build.gradle.kts  proguard-rules.pro
malaika_flutter/android/app/src/main/: AndroidManifest.xml
malaika_flutter/android/app/src/main/kotlin/com/malaika/malaika_flutter/: MainActivity.kt  MalaikaCameraPlugin.kt
malaika_flutter/ios/Runner/: AppDelegate.swift  Info.plist
malaika_flutter/ios/Runner.xcodeproj/: project.pbxproj
malaika_flutter/lib/: main.dart
malaika_flutter/lib/core/: agentic_assessor.dart  agentic_orchestrator.dart  assessment_store.dart  chat_engine.dart  imci_protocol.dart  imci_questionnaire.dart  imci_types.dart  reconciliation_engine.dart  skills.dart  tool_call_tracker.dart  treatment_protocol.dart  voice_service.dart
malaika_flutter/lib/inference/: gemma_inference_service.dart  inference_service.dart  model_manager.dart
malaika_flutter/lib/screens/: camera_monitor_screen.dart  capture_screen.dart  dashboard_screen.dart  emergency_signs_screen.dart  home_screen.dart  splash_screen.dart
malaika_flutter/lib/services/: malaika_camera.dart
malaika_flutter/lib/theme/: malaika_theme.dart
malaika_flutter/lib/widgets/: assessment_complete_card.dart  benchmark_card.dart  chat_bubble.dart  classification_card.dart  danger_alert_banner.dart  finding_chip.dart  image_request_card.dart  imci_progress_bar.dart  orb_button.dart  reasoning_card.dart  skill_card.dart  skill_event_card.dart  voice_waveform.dart
malaika_flutter/test/: widget_test.dart
malaika_flutter/test/core/: imci_protocol_test.dart  treatment_protocol_test.dart
notebooks/: 01_gemma4_feasibility_test.py  02_finetune_breath_sounds.ipynb  02_finetune_breath_sounds.py  03_end_to_end_test.ipynb  03_end_to_end_test.py  04_day4_real_data_test.py  05_finetune_unsloth_kaggle.ipynb  06_finetune_audio_features.ipynb  06_unsloth_binary_phase1.ipynb  07_unsloth_E2B_edge.ipynb  08_colab_run_app.ipynb  09_chat_app_colab.ipynb  10_voice_agent_colab.ipynb  11_edge_offline_colab.ipynb  12_village_clinic_finetuned.ipynb  README.md  kaggle_e2e_results.ipynb
scripts/: download_datasets.py  run_edge_local.py  run_on_kaggle.py
tests/: conftest.py  test_audio.py  test_imci_engine.py  test_imci_protocol.py  test_inference.py  test_prompts.py  test_spectrogram.py  test_tts.py  test_vision.py
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/breath/: route.ts
web/app/api/health/: route.ts
web/app/portal/: actions.ts  analyzer.tsx  page.tsx  sign-in-form.tsx
web/components/: footer.tsx  nav.tsx  wordmark.tsx
